@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

class Client {
}

class Address {
    streetName
    cityName
    zipCode
    district

}

abstract class Person {
    name
    passportCardNumber
    taxNumber
    emailAddress
    phoneNumber
}

Person <|-- Client
Person "1" -- "1" Address : located at >

@enduml